# pokemon-data-analysis

./: .gitignore  INSTRUCTIONS.md  README.md  main.ipynb  main.tex  presentation.tex  pyproject.toml
output/: dream_team.csv  pokemon_engineered.csv
