[project]
name = "pokemon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pip>=25.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
]
